--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.14",
     "react": "^18",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@heroicons/react": "^2.1.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
